Fix more dark mode colors

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -5,8 +5,12 @@ header {
   
   margin: 0 auto;
   display: flex;
-  box-shadow: 0 2px 0 0 #f5f5f5;
+  box-shadow: 0 2px 0 0 $divider-shadow;
   align-items: center;
+
+  .dark & {
+    box-shadow: 0 2px 0 0 $divider-shadow-dark;
+  }
 
   .brand {
     display: flex;
@@ -31,6 +35,10 @@ header {
 
     &__name {
       margin-left: 10px;
+
+      .dark & {
+        color: white;
+      }
     }
   }
 
@@ -45,6 +53,10 @@ header {
       color: #595959;
       border-bottom: 1px solid transparent;
       text-transform: capitalize;
+
+      .dark & {
+        color: white;
+      }
 
       &:hover {
         border-bottom: 1px solid $primary-color__hover;
