--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -4,17 +4,29 @@
   color: #363636;
   margin-bottom: 10px;
   font-weight: 600;
+
+  .dark & {
+    color: white;
+  }
 }
 
 .occupation {
   font-weight: 400;
   color: #4a4a4a;
   margin-bottom: 20px;
+
+  .dark & {
+    color: white;
+  }
 }
 
 .description {
   color: #4a4a4a;
   font-weight: 400;
+
+  .dark & {
+    color: white;
+  }
 }
 
 .social-buttons {
@@ -29,10 +41,14 @@
 }
 
 .latest-post {
-  box-shadow: 0 -2px 0 0 #f5f5f5;
+  box-shadow: 0 -2px 0 0 $divider-shadow;
   padding: 20px 0;
   max-width: $width-large;
   margin: 0 auto;
+
+  .dark & {
+    box-shadow: 0 -2px 0 0 $divider-shadow-dark;
+  }
 
   &__title {
     margin-bottom: 10px;
@@ -55,5 +71,9 @@
     font-size: 0.75rem;
     color: #4a4a4a;
     margin: 0;
+
+    .dark & {
+      color: white;
+    }
   }
 }
